[package]
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
categories = ["asynchronous", "concurrency", "caching", "data-structures"]
description = "This library offers hash map, hash set and cache data structures where individual entries can be locked"
documentation = "https://docs.rs/lockable"
rust-version = "1.75"
edition = "2021"
homepage = "https://github.com/smessmer/lockable"
keywords = ["concurrency", "thread", "locks", "mutex", "async"]
license = "MIT OR Apache-2.0"
name = "lockable"
readme = "README.md"
repository = "https://github.com/smessmer/lockable"
version = "0.1.1"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["lru"]
lru = ["dep:lru"]
# Enable slow assertions. Don't use this in production code. It is *very* slow.
slow_assertions = []

[dependencies]
futures = "^0.3"
lru = {version = "^0.12", optional = true}
tokio = {version = "^1.22", features = ["sync", "time"]}
derive_more = {version = "^1.0", features = ["display", "error"]}
itertools = "^0.13"

[dev-dependencies]
tokio = {version = "^1.22", features = ["sync", "time", "macros", "rt-multi-thread"]}
async-trait = "^0.1.83"
criterion = {version = "^0.5", features = ["async_tokio"]}

[[bench]]
name = "bench"
harness = false
